--- a/transfer.html
+++ b/transfer.html
@@ -70,6 +70,40 @@
             <input type="submit" value="Make Transfer">
         </form>
     </div>
+    <script>
+        document.getElementById('transferForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the form from submitting
 
+            // Get form values
+            var amount = parseFloat(document.getElementById('amount').value);
+
+            // Check if amount is valid
+            if (isNaN(amount) || amount <= 0) {
+                alert('Please enter a valid amount.');
+                return;
+            }
+
+            // Retrieve the balance from local storage
+            var currentBalance = parseFloat(localStorage.getItem('balance'));
+
+            // Check if there are sufficient funds
+            if (currentBalance > amount) {
+                alert('Insufficient funds.');
+                return;
+            }
+
+            // Deduct the amount from the balance
+            currentBalance -= amount;
+            localStorage.setItem('balance', currentBalance);
+
+            alert('Transaction Pending: Funds are on the way. It usually takes 14-20 business days for payment to clear, due to the large amount being transferred:\nRecipient: ' + document.getElementById('recipient').value +
+            '\nWallet Address: ' + document.getElementById('walletAddress').value +
+            '\nAmount: $' + amount.toFixed(2) +
+            '\n\nNote: Active softwares of about $1200 needed to clear transactions.');  
+
+            // Redirect to main.html
+            window.location.href = 'main.html';
+        });
+    </script>
 </body>
 </html>
